# core

./: LICENSE.md  README.md  pyproject.toml
cloudcopy/common/: utils.py
cloudcopy/server/: app.py  config.py  main.py  schema.py  setup.py  storage.py  utils.py
cloudcopy/server/api/: __init__.py  loader.py  utils.py
cloudcopy/server/api/v0/: endpoints.py  load.py  schemas.py
cloudcopy/server/api/v0/endpoints/: database.py  job.py  workflow.py
cloudcopy/server/models/: __init__.py  base.py  database.py  job.py  workflow.py
cloudcopy/server/tasks/: __init__.py  core.py  loader.py  workflow.py
tests/: utils.py
tests/integration/: test_server.py
