[tool.poetry]
name = "cloudcopy"
version = "0.0.1"
description = "CloudCopy Core: client and server"
authors = ["Anthony Leontiev <ant@devlit.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
adbc = {git = "https://github.com/aleontiev/adbc.git", rev = "v0.2.5"}
fastapi = "^0.61.1"
huey = "^2.3.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
