[tool.poetry]
name = "cloudcopy"
version = "0.0.1"
description = "CloudCopy Core: client and server"
authors = ["Anthony Leontiev <ant@devlit.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
adbc = {path = "/home/ant/code/adbc"} # git = "https://github.com/aleontiev/adbc.git", rev = "v0.2.8"}
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pytest-asyncio = "^0.14.0"
httpx = "^0.15.4"
aiofiles = "^0.5.0"
arrow = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-asyncio = "^0.14.0"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
