[tool.poetry]
name = "cloudcopy"
version = "0.0.1"
description = "CloudCopy Core: client and server"
authors = ["Anthony Leontiev <ant@devlit.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
adbc = {git = "https://github.com/aleontiev/adbc.git", rev = "v0.2.9"}
# adbc = {path = "/home/ant/code/adbc"}
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pytest-asyncio = "^0.14.0"
httpx = "^0.15.4"
arrow = "^0.16.0"
huey = "^2.3.0"
peewee = "^3.13.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.0"
pytest-asyncio = "^0.14.0"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
